# finnie-ai

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  ROADMAP.md  SPEC_DEV.md  SUBMISSION_GUIDE.md  cloudbuild.yaml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
.streamlit/: config.toml  secrets.toml.example
Requirements/: Grading Rubric_AI Finance Assistant.xlsx  ~$Grading Rubric_AI Finance Assistant.xlsx
docs/: ARCHITECTURE.md  AURADB_SETUP.md  CAPSTONE_PRESENTATION.html  CODE_WALKTHROUGH.md  DEPLOYMENT.md  IMPLEMENTATION_QA.md  INITIAL_PROMPTS.md  PROMPT_JOURNAL.md  TEST_GUIDE.md
src/: __init__.py  config.py  evals.py  llm_gateway.py  memory.py  observability.py
src/agents/: __init__.py  advisor.py  analyst.py  base.py  crypto.py  enhancer.py  guardian.py  oracle.py  planner.py  professor.py  quant.py  scout.py  scribe.py
src/api/: __init__.py  main.py
src/graphrag/: __init__.py  graph_client.py  ingest.py  retriever.py
src/graphrag/data/: companies.json  concept_relationships.json  concepts.json  etfs.json  sectors.json
src/llm/: __init__.py  adapter.py  anthropic_provider.py  google_provider.py  openai_provider.py
src/mcp/: __init__.py  server.py
src/mcp/tools/: __init__.py  chart_tools.py  finance_tools.py
src/orchestration/: __init__.py  graph.py  nodes.py  state.py
src/ui/: __init__.py  app.py  auth.py  voice.py
src/ui/stt_component/: index.html
src/ui/tabs/: __init__.py  chat.py  crypto.py  help.py  market.py  plan_builder.py  planner.py  portfolio.py  projections.py  settings.py
tests/: __init__.py  conftest.py  test_agents.py  test_calculators.py  test_llm_adapters.py  test_new_agents.py  test_orchestration.py
tests/eval/: __init__.py  test_agent_quality.py  test_phoenix_eval.py
